rep-commission-lwc/force-app/main/default/objects/Representative_Commission__c/Representative_Commission__c.object-meta.xml
<CustomObject>
    <label>Representative Commission</label>
    <nameField>
        <label>Representative Commission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Representative Commissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>