rep-commission-lwc/force-app/main/default/objects/Representative_Commission__c/fields/Approve_to_Fund_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Approve_to_Fund_Ratio__c</fullName>
    <label>Approve to Fund Ratio</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>