rep-commission-lwc/force-app/main/default/objects/Representative_Commission__c/fields/Attainment_Calc__c.field-meta.xml
<CustomField>
    <fullName>Attainment_Calc__c</fullName>
    <label>Attainment %</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>