rep-commission-lwc/force-app/main/default/objects/Representative_Commission__c/fields/Brokered_Commission_Calc__c.field-meta.xml
<CustomField>
    <fullName>Brokered_Commission_Calc__c</fullName>
    <label>Brokered Commission</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>