rep-commission-lwc/force-app/main/default/objects/Representative_Commission__c/fields/Brokered_Margin__c.field-meta.xml
<CustomField>
    <fullName>Brokered_Margin__c</fullName>
    <label>Brokered Margin %</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>