rep-commission-lwc/force-app/main/default/objects/Representative_Commission__c/fields/Brokered_Margin_Amount__c.field-meta.xml
<CustomField>
    <fullName>Brokered_Margin_Amount__c</fullName>
    <label>Brokered Margin Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>