rep-commission-lwc/force-app/main/default/objects/Representative_Commission__c/fields/Cardiff_Deal_Margin__c.field-meta.xml
<CustomField>
    <fullName>Cardiff_Deal_Margin__c</fullName>
    <label>Cardiff Deal Margin %</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>