rep-commission-lwc/force-app/main/default/objects/Representative_Commission__c/fields/Cardiff_Deal_Margin_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cardiff_Deal_Margin_Amount__c</fullName>
    <label>Cardiff Deal Margin Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>