rep-commission-lwc/force-app/main/default/objects/Representative_Commission__c/fields/Commission_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Commission_Adjustment__c</fullName>
    <label>Commission Adjustment</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>