rep-commission-lwc/force-app/main/default/objects/Representative_Commission__c/fields/Commission_Adjustment_Note__c.field-meta.xml
<CustomField>
    <fullName>Commission_Adjustment_Note__c</fullName>
    <label>Commission Adjustment Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>