rep-commission-lwc/force-app/main/default/objects/Representative_Commission__c/fields/Commission_Amount_Calc__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount_Calc__c</fullName>
    <label>Commission Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>