rep-commission-lwc/force-app/main/default/objects/Representative_Commission__c/fields/Commission_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Commission_Month_Year__c</fullName>
    <label>Commission Month Year</label>
    <length>20</length>
    <type>Text</type>
</CustomField>