rep-commission-lwc/force-app/main/default/objects/Representative_Commission__c/fields/Commission_Plan_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Commission_Plan_Developer_Name__c</fullName>
    <label>Commission Plan Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>