rep-commission-lwc/force-app/main/default/objects/Representative_Commission__c/fields/Day60_Plus_Termed_Margin_Amount__c.field-meta.xml
<CustomField>
    <fullName>Day60_Plus_Termed_Margin_Amount__c</fullName>
    <label>60 Day + Termed Margin Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>