rep-commission-lwc/force-app/main/default/objects/Representative_Commission__c/fields/Day60_Termed_Commission_Calc__c.field-meta.xml
<CustomField>
    <fullName>Day60_Termed_Commission_Calc__c</fullName>
    <label>60 Day Termed Commission</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>