rep-commission-lwc/force-app/main/default/objects/Representative_Commission__c/fields/Deal_Margin_Commission_Calc__c.field-meta.xml
<CustomField>
    <fullName>Deal_Margin_Commission_Calc__c</fullName>
    <label>Deal Margin Commission</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>