rep-commission-lwc/force-app/main/default/objects/Representative_Commission__c/fields/Eligible_Units__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Units__c</fullName>
    <label>Eligible Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>