rep-commission-lwc/force-app/main/default/objects/Representative_Commission__c/fields/Proposed_Comp_Commission_Calc__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Comp_Commission_Calc__c</fullName>
    <label>Proposed Comp Commission</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>