rep-commission-lwc/force-app/main/default/objects/Representative_Commission__c/fields/Team_Closing_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Team_Closing_Ratio__c</fullName>
    <label>Team Closing Ratio</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>