rep-commission-lwc/force-app/main/default/objects/Representative_Commission__c/fields/Termed_Deal_Margin_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Termed_Deal_Margin_Percentage__c</fullName>
    <label>Termed Deal Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>