rep-commission-lwc/force-app/main/default/objects/Representative_Commission__c/fields/Tier_Lower_Calc__c.field-meta.xml
<CustomField>
    <fullName>Tier_Lower_Calc__c</fullName>
    <label>Tier Lower Bound</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>