rep-commission-lwc/force-app/main/default/objects/Representative_Commission__c/fields/X50K_Funded__c.field-meta.xml
<CustomField>
    <fullName>X50K_Funded__c</fullName>
    <label>$50K Funded</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>